--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
       <meta charset="UTF-8" />
       <link rel="icon" type="image/svg+xml" href="favicon.svg" />
       <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-      <title>TailwindCSS Landing Page</title>
+      <title>Apequest</title>
+      <link rel="icon" type="image/x-icon" href="https://raw.githubusercontent.com/apenomad/assets/main/logo.png">
       <style>
          /* GOOGLE FONTS */
 @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;900&display=swap");
