--- a/index.html
+++ b/index.html
@@ -924,10 +924,10 @@ button {
      <div class="nav__menu" id="nav-menu">
        <ul class="nav__list">
          <li class="nav__item">
-           <a href="#home" class="nav__link active-link">About</a>
+           <a href="#home" class="nav__link active-link">Home</a>
          </li>
          <li class="nav__item">
-           <a href="#about" class="nav__link">Features</a>
+           <a href="#about" class="nav__link">About</a>
          </li>
          <li class="nav__item">
            <a href="mailto:hello@apequest.club" class="nav__link">Contact</a>
