--- a/index.html
+++ b/index.html
@@ -155,8 +155,8 @@
                     <div class="about__data">
                         <h2 class="home__title">FILTER YOUR
                            <br> QUALITY AUDIENCE</h2>
-                        <p class="about__description">The users also get NFT badges with its metadata showcasing activities like participation, achievements and consistency. 
-                            DAOs/Communities can use this to track their active members and also reward/whitelist them for the future.
+                        <p class="about__description">The active users can be tracked through NFT badges with its metadata showcasing activities like participation, achievements and consistency. 
+          
                         </p>
                     </div>
 
