--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <!--=============== FAVICON ===============-->
-        <link rel="shortcut icon" href="https://raw.githubusercontent.com/apenomad/assets/main/icon.png" type="image/x-icon">
+        <link rel="shortcut icon" href="assets/img/apequest-logo.png" type="image/x-icon">
 
         <!--=============== BOXICONS ===============-->
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/boxicons@latest/css/boxicons.min.css">
@@ -21,8 +21,8 @@
         <!--==================== HEADER ====================-->
         <header class="header" id="header">
             <nav class="nav container">
-                <a href="#" class="nav__logo">
-                    <img src="https://raw.githubusercontent.com/apenomad/assets/main/icon.png" alt="" class="nav__logo-img">
+                <a href="https://apequest.club" class="nav__logo">
+                    <img src="assets/img/apequest-logo.png" alt="" class="nav__logo-img">
                     Apequest
                 </a>
 
@@ -70,7 +70,7 @@
                         <section class="swiper-slide">
                             <div class="home__content grid">
                                 <div class="home__group">
-                                    <img src="https://img.freepik.com/free-vector/cute-monkey-gamer-playing-game-cartoon-vector-icon-illustration-animal-technology-icon-isolated_138676-5388.jpg?w=740&t=st=1674498407~exp=1674499007~hmac=d52faed5bbbf58b9f51976aeae8f87c3be5a793626ad46c2b130c3127aee84f0" alt="" class="home__img">
+                                    <img src="assets/img/home-monkey.png" alt="" class="home__img">
                                     <!--
                                     <div class="home__indicator"></div>
                                     <div class="home__details-img">
@@ -160,7 +160,7 @@
                         </p>
                     </div>
 
-                    <img src="https://cdn-icons-png.flaticon.com/512/5264/5264949.png" alt="" class="about__img">
+                    <img src="assets/img/about-nft.png" alt="" class="about__img">
                 </div>
             </section>
             
@@ -169,17 +169,17 @@
                 <h2 class="section__title">Features we offer</h2>
                 <div class="category__container container grid">
                     <div class="category__data">
-                      <img src="https://cdn-icons-png.flaticon.com/512/3408/3408591.png" alt="" class="category__img">
+                      <img src="assets/img/features-dashboard.png" alt="" class="category__img">
                       <h3 class="category__title">DAO Dashboard</h3>
                       <p class="category__description">Dashboard for DAOs to add the quiz questions and stake amount.</p>
                     </div>
                     <div class="category__data">
-                      <img src="https://cdn-icons-png.flaticon.com/512/2641/2641457.png" alt="" class="category__img">
+                      <img src="assets/img/features-quizz.png" alt="" class="category__img">
                       <h3 class="category__title">Quiz App</h3>
                       <p class="category__description">Leaderboard at the end of each quiz, providing insights to the DAOs.</p>
                     </div>
                     <div class="category__data">
-                      <img src="https://cdn-icons-png.flaticon.com/512/8388/8388172.png" alt="" class="category__img">
+                      <img src="assets/img/features-userux.png" alt="" class="category__img">
                       <h3 class="category__title">User UX</h3>
                       <p class="category__description">Profiles showcasing achievemnets like NFT badges, amount won.</p>
                     </div>
@@ -383,7 +383,7 @@
                     </p>
 
                     <form action="" class="newsletter__form">
-                        <input type="text" placeholder="Enter your email" class="newsletter__input">
+                        <input type="text" placeholder="Enter your email" class="newsletter__input" disabled>
                         <button style="color:white"class="button">
                             Subscribe
                         </button>
@@ -397,7 +397,7 @@
                 <div class="footer__container container grid">
                     <div class="footer__content">
                         <a href="#" class="footer__logo">
-                            <img src="https://raw.githubusercontent.com/apenomad/assets/main/icon.png" alt="" class="footer__logo-img">
+                            <img src="assets/img/apequest-logo.png" alt="" class="footer__logo-img">
                             Apequest
                         </a>
 
@@ -468,10 +468,10 @@
 
                 <span class="footer__copy">&#169; Apequest. All rigths reserved</span>
 
-                <img src="https://cms-assets.tutsplus.com/cdn-cgi/image/width=850/uploads/users/127/posts/26911/image/5_1a.png" alt="" class="footer__img-two">
-                <img src="https://www.pinclipart.com/picdir/big/338-3380671_monkey-clip-art-transparent-monkey-clipart-png-download.png" alt="" class="footer__img-one">
+                <img src="assets/img/last-monkey1.png" alt="" class="footer__img-two">
+                <img src="assets/img/last-monkey2.png" alt="" class="footer__img-one">
             </footer>
-
+            
             <!--=============== SCROLL UP ===============-->
             <a href="#" class="scrollup" id="scroll-up">
                 <i class='bx bx-up-arrow-alt scrollup__icon'></i>
